# imebra_git

./: .gitignore  CMakeLists.txt  DoxyfileCHM  DoxyfilePDFH  appveyor.yml  automatic_build.xml  bitbucket-pipelines.yml  build.number  build.xml  getVersion.py  puntoexe_library.sln  readme.md  readme.rst  setup.py  solano.yml  trigger_pipelines.txt  uploadDropbox.py
base/include/: baseObject.h  baseStream.h  stream.h  (+6 more)
build-tools/: imebra_generate_dictionary.py
dicomheroCore6/: CMakeLists.txt
dicomheroCore6/tests/: CImbx_tests.cpp  bitTransformTest.cpp  buildImageForTest.cpp  buildImageForTest.h  colorConversionTest.cpp  corruptedFilesTest.cpp  dateTimeHandlerTest.cpp  dicomCodecTest.cpp  dicomDictionaryTest.cpp  dicomDirTest.cpp  dimseTest.cpp  drawBitmapTest.cpp  exceptionsTest.cpp  jpegCodecTest.cpp  lutTest.cpp  memoryTest.cpp  multipleImagesTest.cpp  numericHandlerTest.cpp  paletteTest.cpp  streamTest.cpp  stringHandlerTest.cpp  tcpTest.cpp  transformsChainTest.cpp  unicodeStringHandlerTest.cpp  voilutTests.cpp
dicomheroCore6/wrappers/javaWrapper/: CMakeLists.txt
dicomheroCore6/wrappers/objectivec/include/dicomhero6_objc/: dicomhero.h  dicomhero_VOIDescription.h  dicomhero_VOILUT.h  dicomhero_acse.h  dicomhero_baseStreamInput.h  dicomhero_baseStreamOutput.h  dicomhero_baseUidGenerator.h  dicomhero_codecFactory.h  dicomhero_colorTransformsFactory.h  dicomhero_dataset.h  dicomhero_dateAge.h  dicomhero_dicomDictionary.h  dicomhero_dicomDir.h  dicomhero_dimse.h  dicomhero_drawBitmap.h  dicomhero_exceptions.h  dicomhero_fileStreamInput.h  dicomhero_fileStreamOutput.h  dicomhero_image.h  dicomhero_lut.h  dicomhero_memoryPool.h  dicomhero_memoryStreamInput.h  dicomhero_memoryStreamOutput.h  dicomhero_modalityVOILUT.h  dicomhero_overlay.h  dicomhero_patientName.h  dicomhero_pipe.h  dicomhero_randomUidGenerator.h  dicomhero_readMemory.h  dicomhero_readWriteMemory.h  dicomhero_readingDataHandler.h  dicomhero_readingDataHandlerNumeric.h  dicomhero_serialNumberUidGenerator.h  dicomhero_streamReader.h  dicomhero_streamWriter.h  dicomhero_tag.h  dicomhero_tagId.h  dicomhero_tcpAddress.h  dicomhero_tcpListener.h  dicomhero_tcpStream.h  (+8 more)
dicomheroCore6/wrappers/objectivec/src/: dicomhero_baseStreamInput.mm  dicomhero_baseStreamOutput.mm  dicomhero_baseUidGenerator.mm  dicomhero_dataset.mm  dicomhero_dicomDir.mm  dicomhero_dimse.mm  dicomhero_drawBitmap.mm  dicomhero_image.mm  dicomhero_implementation_macros.h  dicomhero_lut.mm  dicomhero_modalityVOILUT.mm  dicomhero_nserror.h  dicomhero_nserror.mm  dicomhero_overlay.mm  dicomhero_pipe.mm  dicomhero_readWriteMemory.mm  dicomhero_readingDataHandlerNumeric.mm  dicomhero_strings.h  dicomhero_tag.mm  dicomhero_tcpAddress.mm  dicomhero_tcpListener.mm  dicomhero_tcpStream.mm  dicomhero_transform.mm  dicomhero_transformsChain.mm  dicomhero_uidGeneratorFactory.mm  dicomhero_version.mm
docs/: Doxyfile  DoxyfileHTML  DoxyfileXML  a_license.h  acse_classes.rst  add_to_project.rst  b_imebra_structure.h  build_distribution.rst  changes_log.rst  commercial.rst  commercial.txt  commercial_license.txt  commercial_license_personal.txt  compiling_imebra.rst  conf.py  copyright.rst  d_addToProject.h  definition_classes.rst  dicom_data_classes.rst  dicom_dataset_tag_classes.rst  dicom_dictionary_classes.rst  dicom_uid_generation_classes.rst  dicomdir_classes.rst  dimse_classes.rst  documentation.html  download.rst  e_unicode.h  exception_classes.rst  f_transactions_locks.h  g_examples.h  html_header.html  imaging_classes.rst  imebra.mdj  imebra_requirements.xml  index.html  index.rst  introduction.rst  loading_files.rst  loading_saving_classes.rst  logging.rst  (+25 more)
examples/: CMakeLists.txt
examples/c++/changeTransferSyntax/: changeTransferSyntax.cpp
examples/c++/dicom2jpeg/: dicom2jpeg.cpp
examples/c++/dicomdirItems/: dicomdirItems.cpp
examples/c++/scpExample/: scpExample.cpp
examples/changeTransferSyntax/: CMakeLists.txt  changeTransferSyntax.cpp
examples/dicom2jpeg/: CMakeLists.txt  dicom2jpeg.cpp
examples/dicomdirItems/: CMakeLists.txt  dicomdirItems.cpp  dicomdiritems.pro
examples/swift/: cmove.swift
project_files/: DoxyfileCHM  DoxyfileHTML  DoxyfilePDF  DoxyfilePDFH  imebra.mds  imebra_codeblocks.workspace  puntoexe_library.sln
tests/: CImbx_tests.cpp  CMakeLists.txt  acseTest.cpp  ageStringHandlerTest.cpp  bitTransformTest.cpp  buildImageForTest.cpp  buildImageForTest.h  colorConversionTest.cpp  corruptedFilesTest.cpp  dataSetTest.cpp  dateTimeHandlerTest.cpp  decimalStringHandlerTest.cpp  dicomCodecTest.cpp  dicomDictionaryTest.cpp  dicomDirTest.cpp  dimseTest.cpp  drawBitmapTest.cpp  exceptionsTest.cpp  jpegCodecTest.cpp  lutTest.cpp  memoryTest.cpp  modalityVoilutTests.cpp  multipleImagesTest.cpp  numericHandlerTest.cpp  paletteTest.cpp  pipeTest.cpp  streamTest.cpp  stringHandlerTest.cpp  tcpTest.cpp  transactionTest.cpp  transformsChainTest.cpp  uidGeneratorsTest.cpp  unicodeStringHandlerTest.cpp  voilutTests.cpp
tests/CImbx_tests/: CImbx_tests.vcproj  ageStringHandlerTest.h  bitTransformTest.cpp  bitTransformTest.h  bufferTest.cpp  buildImageForTest.cpp  dataSetTest.h  dateTimeHandlerTest.h  dicomCodecTest.h  exceptionsTest.h  huffmanTest.cpp  jpegCodecTest.h  memoryStreamTest.h  numericHandlerTest.cpp  paletteTest.h  transactionTest.cpp  transactionTest.h  unicodeStringHandlerTest.h
tests/java/src/com/dicomhero/tests/: DicomheroTests.java
tests/java/src/com/imebra/tests/: ImebraTests.java
tests/objectivec/: objectivecTest.mm
tests/python/: tests.py
tests/test-implementation/: CMakeLists.txt  ageStringHandlerTest.cpp  bitTransformTest.cpp  bufferTest.cpp  buildImageForTest.cpp  buildImageForTest.h  corruptedFilesTest.cpp  dataSetTest.cpp  dateTimeHandlerTest.cpp  decimalStringHandlerTest.cpp  dicomCodecTest.cpp  dicomDirTest.cpp  drawBitmapTest.cpp  exceptionsTest.cpp  huffmanTest.cpp  integerStringHandlerTest.cpp  jpegCodecTest.cpp  memoryStreamTest.cpp  numericHandlerTest.cpp  paletteTest.cpp  streamBitsTest.cpp  streamTest.cpp  unicodeStringHandlerTest.cpp
wrappers/: CMakeLists.txt  build.gradle  swig.i
(+609 files in other folders)
